Tutorials: Fix overflowing tables on mobile. (#154)

--- a/themes/dljs/source/css/layout.scss
+++ b/themes/dljs/source/css/layout.scss
@@ -376,3 +376,9 @@ body {
     margin-top: 64px;
   }
 }
+
+.page-model-save-load {
+  .scrollable-table {
+    overflow-x: auto;
+  }
+}
